# RPCoverBenchmark

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  WORKSPACE  bench.py  docker-compose.yaml  generate.sh  install.sh  package-lock.json  package.json  requirements.txt  run_all_test.sh
Cpp_A/: BUILD  CMakeLists.txt  Makefile  WORKSPACEE  generate_index.sh  index.scip
Cpp_A/protos/: Cpp_A.grpc.pb.cc  Cpp_A.pb.cc  Cpp_B.grpc.pb.cc  Cpp_B.grpc.pb.h  Cpp_B.pb.cc  Go_A.pb.cc  Go_B.pb.h  Java_A.pb.cc  Java_A.pb.h  Java_B.pb.h  Java_C.grpc.pb.h  Java_C.pb.h  Python_B.pb.h  Python_C.pb.cc  Ts_A.grpc.pb.cc  Ts_A.pb.cc  Ts_A.pb.h  Ts_B.grpc.pb.cc  Ts_B.pb.cc  Ts_C.pb.h  message.grpc.pb.h  message.pb.cc  message.pb.h
Cpp_A/src/: server.cc  server.h
Cpp_B/: BUILD  CMakeLists.txt  Makefile  generate_index.sh
Cpp_C/: BUILD  CMakeLists.txt  Makefile  generate_lsif.sh
Cpp_C/protos/: Cpp_A.grpc.pb.h  Cpp_B.pb.h  Cpp_C.grpc.pb.cc  Go_A.grpc.pb.h  Go_B.grpc.pb.cc  Go_B.grpc.pb.h  Go_C.grpc.pb.cc  Go_C.pb.cc  Go_C.pb.h  Java_A.grpc.pb.cc  Java_A.grpc.pb.h  Java_B.grpc.pb.cc  Java_B.grpc.pb.h  Java_C.pb.cc  Python_A.grpc.pb.h  Python_A.pb.h  Python_B.pb.cc  Python_C.grpc.pb.cc  Python_C.pb.h  Ts_B.grpc.pb.h  Ts_C.grpc.pb.h  Ts_C.pb.cc
Cpp_C/src/: server.cc  server.h
Go_A/: Dockerfile  generate_lsif.sh  go.mod
Go_B/: Makefile  go.mod
Go_C/: go.mod
Java_A/: BUILD  Makefile  pom.xml
Java_B/: BUILD  Makefile  WORKSPACE  generate_index.sh  pom.xml
Java_C/: .bazelrc  BUILD  Makefile  pom.xml
Python_A/: client.py  pyproject.toml  server.py
Ts_A/: server.ts
(+256 files in other folders)
